@@ -20,7 +20,6 @@ import com.redhat.rhn.domain.contentmgmt.modulemd.ModulemdApi;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Validates a content project instance using a specified list of validators
@@ -61,6 +60,6 @@ public class ContentProjectValidator {
     public List<ContentValidationMessage> validate() {
         return validators.stream()
                 .flatMap(v -> v.validate(project).stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
