@@ -27,7 +27,6 @@ import com.redhat.rhn.domain.action.Action;
 import com.redhat.rhn.domain.action.ActionFactory;
 import com.redhat.rhn.domain.action.ActionStatus;
 import com.redhat.rhn.domain.action.ActionType;
-import com.redhat.rhn.domain.action.channel.SubscribeChannelsAction;
 import com.redhat.rhn.domain.action.config.ConfigRevisionActionResult;
 import com.redhat.rhn.domain.action.config.ConfigVerifyAction;
 import com.redhat.rhn.domain.action.dup.DistUpgradeAction;
@@ -46,7 +45,6 @@ import com.redhat.rhn.domain.action.server.ServerAction;
 import com.redhat.rhn.domain.action.virtualization.BaseVirtualizationGuestAction;
 import com.redhat.rhn.domain.action.virtualization.BaseVirtualizationNetworkAction;
 import com.redhat.rhn.domain.action.virtualization.BaseVirtualizationPoolAction;
-import com.redhat.rhn.domain.channel.AccessTokenFactory;
 import com.redhat.rhn.domain.channel.Channel;
 import com.redhat.rhn.domain.config.ConfigRevision;
 import com.redhat.rhn.domain.image.ImageFile;
@@ -224,7 +222,11 @@ public class SaltUtils {
         /**
          * A separate full refresh is necessary.
          */
-        NEEDS_REFRESHING
+        NEEDS_REFRESHING,
+        /**
+         * A separate full refresh is necessary, but salt was updated and we need delay refreshing
+         */
+        NEEDS_DELAYED_REFRESHING
     }
 
     /**
@@ -353,6 +355,13 @@ public class SaltUtils {
         );
 
         if (fullRefreshNeeded) {
+            boolean needDelay = changes.entrySet()
+                    .stream().anyMatch(e ->
+                            e.getKey().startsWith("salt") ||
+                                    e.getKey().equals("venv-salt-minion"));
+            if (needDelay) {
+                return PackageChangeOutcome.NEEDS_DELAYED_REFRESHING;
+            }
             return PackageChangeOutcome.NEEDS_REFRESHING;
         }
         else {
@@ -459,14 +468,12 @@ public class SaltUtils {
                 }).orElseGet(Stream::empty))
                 // we sort by run order process multiple package changing states right
                 .sorted(Comparator.comparingInt(StateApplyResult::getRunNum))
-                .collect(Collectors.toList());
+                .toList();
         for (StateApplyResult<JsonElement> value : collect) {
-              Map<String, Change<Xor<String, List<Pkg.Info>>>> delta =
-                      extractPackageDelta(value.getChanges());
-
-            if (applyChangesFromStateModule(delta, server) ==
-                    PackageChangeOutcome.NEEDS_REFRESHING) {
-                return PackageChangeOutcome.NEEDS_REFRESHING;
+            Map<String, Change<Xor<String, List<Pkg.Info>>>> delta = extractPackageDelta(value.getChanges());
+            PackageChangeOutcome changeOutcome = applyChangesFromStateModule(delta, server);
+            if (changeOutcome != PackageChangeOutcome.DONE) {
+                return changeOutcome;
             }
         }
         return PackageChangeOutcome.DONE;
@@ -828,24 +835,8 @@ public class SaltUtils {
     private void handleSubscribeChannels(ServerAction serverAction, JsonElement jsonResult, Action action) {
         if (serverAction.getStatus().equals(ActionFactory.STATUS_COMPLETED)) {
             serverAction.setResultMsg("Successfully applied state: " + ApplyStatesEventMessage.CHANNELS);
-            SubscribeChannelsAction sca = (SubscribeChannelsAction)action;
-
-            // if successful update channels in db and trigger pillar refresh
-            SystemManager.updateServerChannels(
-                    action.getSchedulerUser(),
-                    serverAction.getServer(),
-                    Optional.ofNullable(sca.getDetails().getBaseChannel()),
-                    sca.getDetails().getChannels());
         }
         else {
-            //set the token as invalid
-            SubscribeChannelsAction sca = (SubscribeChannelsAction)action;
-            sca.getDetails().getAccessTokens().forEach(token -> {
-                token.setValid(false);
-                token.setMinion(null);
-                AccessTokenFactory.save(token);
-            });
-
             serverAction.setResultMsg("Failed to apply state: " + ApplyStatesEventMessage.CHANNELS + ".\n" +
                     getJsonResultWithPrettyPrint(jsonResult));
         }
@@ -853,23 +844,28 @@ public class SaltUtils {
 
     private String parseMigrationMessage(JsonElement jsonResult) {
         try {
-            DistUpgradeSlsResult distUpgradeSlsResult = Json.GSON.fromJson(
-                    jsonResult, DistUpgradeSlsResult.class);
-            StateApplyResult<RetOpt<Map<String, Change<String>>>> spmig =
-                    distUpgradeSlsResult.getSpmigration();
-            String message = spmig.getComment();
-            if (spmig.isResult()) {
-                message = spmig.getChanges().getRetOpt().map(ret -> ret.entrySet().stream().map(entry -> {
-                    StringBuilder sb = new StringBuilder();
-                    sb.append(entry.getKey());
-                    sb.append(":");
-                    sb.append(entry.getValue().getOldValue());
-                    sb.append("->");
-                    sb.append(entry.getValue().getNewValue());
-                    return sb.toString();
-                }).collect(Collectors.joining(","))).orElse(spmig.getComment());
+            DistUpgradeSlsResult distUpgradeSlsResult = Json.GSON.fromJson(jsonResult, DistUpgradeSlsResult.class);
+            if (distUpgradeSlsResult.getSpmigration() != null) {
+                StateApplyResult<RetOpt<Map<String, Change<String>>>> spmig =
+                        distUpgradeSlsResult.getSpmigration();
+                String message = spmig.getComment();
+                if (spmig.isResult()) {
+                    message = spmig.getChanges().getRetOpt().map(ret -> ret.entrySet().stream().map(entry ->
+                            entry.getKey() + ":" + entry.getValue().getOldValue() +
+                                    "->" + entry.getValue().getNewValue()
+                    ).collect(Collectors.joining(","))).orElse(spmig.getComment());
+                }
+                return message;
             }
-            return message;
+            else if (distUpgradeSlsResult.getLiberate() != null) {
+                StateApplyResult<CmdResult> liberate = distUpgradeSlsResult.getLiberate();
+                String message = getJsonResultWithPrettyPrint(jsonResult);
+                if (liberate.isResult()) {
+                    message = liberate.getChanges().getStdout();
+                }
+                return message;
+            }
+            return getJsonResultWithPrettyPrint(jsonResult);
         }
         catch (JsonSyntaxException e) {
             try {
@@ -888,7 +884,15 @@ public class SaltUtils {
                         }).orElse("");
             }
             catch (JsonSyntaxException ex) {
-                LOG.error("Unable to parse migration result", ex);
+                try {
+                    TypeToken<List<String>> typeToken = new TypeToken<>() {
+                    };
+                    List<String> saltError = Json.GSON.fromJson(jsonResult, typeToken.getType());
+                    return String.join("\n", saltError);
+                }
+                catch (JsonSyntaxException exc) {
+                    LOG.error("Unable to parse migration result", exc);
+                }
             }
         }
         return "Unable to parse migration result";
@@ -898,19 +902,20 @@ public class SaltUtils {
         try {
             DistUpgradeDryRunSlsResult distUpgradeSlsResult = Json.GSON.fromJson(
                     jsonResult, DistUpgradeDryRunSlsResult.class);
-            return distUpgradeSlsResult.getSpmigration()
-                    .getChanges().getRetOpt()
-                    .orElse("") + " " + distUpgradeSlsResult
-                    .getSpmigration().getComment();
+            if (distUpgradeSlsResult.getSpmigration() != null) {
+                return String.join(" ",
+                                   distUpgradeSlsResult.getSpmigration().getChanges().getRetOpt().orElse(""),
+                                   distUpgradeSlsResult.getSpmigration().getComment());
+            }
         }
         catch (JsonSyntaxException e) {
             try {
                 DistUpgradeOldSlsResult distUpgradeSlsResult = Json.GSON.fromJson(
                         jsonResult, DistUpgradeOldSlsResult.class);
-                return distUpgradeSlsResult.getSpmigration()
-                        .getChanges().getRetOpt().map(ModuleRun::getComment)
-                        .orElse("") + " " + distUpgradeSlsResult
-                        .getSpmigration().getComment();
+                return String.join(" ",
+                                   distUpgradeSlsResult.getSpmigration().getChanges().getRetOpt()
+                                           .map(ModuleRun::getComment).orElse(""),
+                                   distUpgradeSlsResult.getSpmigration().getComment());
             }
             catch (JsonSyntaxException ex) {
                 LOG.error("Unable to parse dry run result", ex);
@@ -1623,7 +1628,7 @@ public class SaltUtils {
 
         Collection<InstalledPackage> unchanged = oldPackageMap.entrySet().stream().filter(
             e -> newPackageMap.containsKey(e.getKey())
-        ).map(Map.Entry::getValue).collect(Collectors.toList());
+        ).map(Map.Entry::getValue).toList();
         packages.retainAll(unchanged);
 
         Map<String, Tuple2<String, Pkg.Info>> packagesToAdd = newPackageMap.entrySet().stream().filter(
@@ -1683,7 +1688,7 @@ public class SaltUtils {
         return packageInfoAndNameBySaltPackageKey.entrySet().stream().map(e -> createInstalledPackage(
                 packageNames.get(e.getValue().getA()),
                 packageEvrsBySaltPackageKey.get(e.getKey()), e.getValue().getB(), server))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -1862,7 +1867,7 @@ public class SaltUtils {
                         result.getDnsFqdns().stream()
                     ),
                     result.getCustomFqdns().stream()
-                ).distinct().collect(Collectors.toList())
+                ).distinct().toList()
         );
         server.setPayg(result.getInstanceFlavor().map(o -> o.equals("PAYG")).orElse(false));
 
@@ -2121,8 +2126,8 @@ public class SaltUtils {
         minion.setLastBoot(bootTime.getTime() / 1000);
 
         // cleanup old reboot actions
-        List<ServerAction> serverActions = ActionFactory
-                .listServerActionsForServer(minion);
+        List<ServerAction> serverActions = ActionFactory.listServerActionsForServerAndTypes(minion,
+                List.of(ActionFactory.TYPE_REBOOT));
         int actionsChanged = 0;
         for (ServerAction sa : serverActions) {
             if (shouldCleanupAction(bootTime, sa)) {
